完成word文件追加

--- a/各种文件类型转换.md
+++ b/各种文件类型转换.md
@@ -1,5 +1,7 @@
 # 各种文件类型转换
 
+项目地址：[https://gitee.com/Jakewabc/word-of-pdf.git](https://gitee.com/Jakewabc/word-of-pdf.git)
+
 相关案例：
 
 [https://github.com/aspose-words/Aspose.Words-for-Java.git](https://github.com/aspose-words/Aspose.Words-for-Java.git)
@@ -105,4 +107,34 @@ public class TestDemo {
 ```
 
 效果就不展示了，反正这样就能转换。
+
+# 三、word文件追加
+
+```java
+import com.aspose.words.Document;
+import com.aspose.words.ImportFormatMode;
+import com.aspose.words.RevisionOptions;
+import com.aspose.words.ShowInBalloons;
+```
+
+```java
+/**
+ * word文件追加
+ */
+public static void AppendDocuments(){
+    // 文件路径
+    String dataDir = "C:\\Users\\stars\\Desktop\\" ;
+    // 源文件
+    Document dstDoc = new Document(dataDir + "powerdesigner使用.doc");
+    // 需要追加的文件（将srcDoc文件追加在dstDoc后面）
+    Document srcDoc = new Document(dataDir + "ZS-1000质量手册.docx");
+    // Append the source document to the destination document while keeping the original formatting of the source document.
+    dstDoc.appendDocument(srcDoc, ImportFormatMode.KEEP_SOURCE_FORMATTING);
+    // 追加后的文件
+    dstDoc.save(dataDir + "TestFile Out.docx");
+    //ExEnd:
+
+    System.out.println("Documents appended successfully.");
+}
+```
 
