完成word文档替换

--- a/各种文件类型转换.md
+++ b/各种文件类型转换.md
@@ -138,3 +138,39 @@ public static void AppendDocuments(){
 }
 ```
 
+# 四、word文档替换
+
+```java
+import com.aspose.words.*;
+
+import java.util.regex.Pattern;
+```
+
+```java
+/**
+ * 查找并替换
+ * @param replaceMark 替换表示符
+ * @param replaceAfter 替换的数据
+ * @throws Exception
+ */
+public static void FindAndReplace(String replaceMark,String replaceAfter) throws Exception {
+    // 文件路径
+    String dataDir = "C:\\Users\\stars\\Desktop\\" ;
+    // 源文件
+    Document doc = new Document(dataDir + "powerdesigner使用.doc");
+    // 检查文档的文本
+    System.out.println("Original document text: " + doc.getRange().getText());
+
+    Pattern regex = Pattern.compile(replaceMark, Pattern.CASE_INSENSITIVE);
+    // Replace the text in the document.
+    doc.getRange().replace(regex, replaceAfter, new FindReplaceOptions());
+    // Check the replacement was made.
+    System.out.println("Document text after replace: " + doc.getRange().getText());
+    // 替换后的文件
+    doc.save(dataDir + "ReplaceSimpleOut.doc");
+}
+```
+
+替换是应该需要注意
+
+如果替换符为 `name`和 `namea`。那么 `name`替换符先执行，那么 `namea`的地方就会将 `name`也替换了，后面剩下 `a`。但是这个`a`又没有替换的地方，所以就保存了下来。这样会造成替换上的失误，所以建议替换符使用`UUID`去掉横线或者生成分布式`id`来充当。
