完成pdf获取指定页

--- a/各种文件类型转换.md
+++ b/各种文件类型转换.md
@@ -174,3 +174,38 @@ public static void FindAndReplace(String replaceMark,String replaceAfter) throws
 替换是应该需要注意
 
 如果替换符为 `name`和 `namea`。那么 `name`替换符先执行，那么 `namea`的地方就会将 `name`也替换了，后面剩下 `a`。但是这个`a`又没有替换的地方，所以就保存了下来。这样会造成替换上的失误，所以建议替换符使用`UUID`去掉横线或者生成分布式`id`来充当。
+
+# 五、PDF获取指定页或者总页码数
+
+```java
+import com.aspose.pdf.Document;
+import com.aspose.pdf.Page;
+
+import java.io.IOException;
+```
+
+```java
+/**
+ * 获取PDF指定页面
+ * <p>如果获取所有PDF，就直接使用 pdfDocument。如果获取指定页数就是使用 newDocument。如果返回所有pdfDocument.save(response.getOutputStream());
+ * 如果返回指定页，newDocument.save(response.getOutputStream());
+ * </p>
+ * @param page 获取的页数
+ * @return pdf总页数
+ */
+public static Integer GetPageCountWithoutSavingPDF(Integer page) throws IOException {
+    // Open a document
+    Document pdfDocument = new Document("C:\\Users\\stars\\Desktop\\a.pdf");
+    // 获取指定页面
+    Page pdfPage = pdfDocument.getPages().getUnrestricted(page);
+    // 创建Document 对象，将指定页面写入
+    Document newDocument = new Document();
+    // Add the page to the Pages collection of new document object
+    newDocument.getPages().add(pdfPage);
+    // Save the new file
+    newDocument.save("C:\\Users\\stars\\Desktop\\page_" + pdfPage.getNumber() + ".pdf");
+    // 返回总页数
+    return pdfDocument.getPages().size();
+}
+```
+
