PDF获取指定页面的另一个中方式

--- a/各种文件类型转换.md
+++ b/各种文件类型转换.md
@@ -12,6 +12,8 @@
 
 # 一、获取jar并安装到maven本地仓库
 
+<font style="font-weight: bold;color:blue">这两个`jar`包是收费的，我这里特意准备是说明这两个`jar`包已经破解开了。</font>
+
 ## 1.1、需要的jar
 
 需要使用的`jar`
@@ -177,6 +179,8 @@ public static void FindAndReplace(String replaceMark,String replaceAfter) throws
 
 # 五、PDF获取指定页或者总页码数
 
+<font style="font-weight: bold;color:blue">这种方式有些页面不能获取，推荐使用另一个jar包完整，第六章会详细讲解。</font>
+
 ```java
 import com.aspose.pdf.Document;
 import com.aspose.pdf.Page;
@@ -206,6 +210,83 @@ public static Integer GetPageCountWithoutSavingPDF(Integer page) throws IOExcept
     newDocument.save("C:\\Users\\stars\\Desktop\\page_" + pdfPage.getNumber() + ".pdf");
     // 返回总页数
     return pdfDocument.getPages().size();
+}
+```
+
+# 六、指定页面获取PDF文档
+
+第五章节提到的这种方式，有些页面会获取不多，所以换一个`jar`包获取。
+
+## 6.1、引入依赖
+
+```xml
+<dependency>
+    <groupId>net.sf.cssbox</groupId>
+    <artifactId>pdf2dom</artifactId>
+    <version>1.7</version>
+</dependency>
+```
+
+如果只完成获取指定页面的`PDF`文档，那么这个`jar`包已经足够了，但是配套的还有两个`jar`包。这些都是开源的，不需要特意准备，直接拉去就`OK`。下面这两个具体用途可以自己去参考。
+
+```xml
+<dependency>
+    <groupId>org.apache.pdfbox</groupId>
+    <artifactId>pdfbox</artifactId>
+    <version>2.0.12</version>
+</dependency>
+<dependency>
+    <groupId>org.apache.pdfbox</groupId>
+    <artifactId>pdfbox-tools</artifactId>
+    <version>2.0.12</version>
+</dependency>
+```
+
+## 6.2、直接贴代码
+
+```java
+import org.apache.pdfbox.multipdf.Splitter;
+import org.apache.pdfbox.pdmodel.PDDocument;
+import org.springframework.web.bind.annotation.RestController;
+
+import javax.servlet.http.HttpServletResponse;
+import java.io.File;
+import java.io.IOException;
+import java.util.List;
+```
+
+```java
+/**
+ *
+ * @param fileName 文件名称
+ * @param pageNum 读取的页数
+ * @param filePath 文件路径
+ * @return
+ */
+public void splitPdf(HttpServletResponse response, int pageNum, String filePath) {
+    // 这是对应文件名
+    File indexFile = new File(filePath);
+    PDDocument document = null;
+    try {
+        document = PDDocument.load(indexFile);
+        // 获取总页数
+        int numberOfPages = document.getNumberOfPages();
+        System.out.println("总页数告诉你哦："+numberOfPages);
+
+        Splitter splitter = new Splitter();
+        // 开始页
+        splitter.setStartPage(pageNum);
+        // 结束页
+        splitter.setEndPage(pageNum);
+        List<PDDocument> pages = splitter.split(document);
+        for (PDDocument pdDocument : pages){
+            pdDocument.save(response.getOutputStream());
+            pdDocument.close();
+        }
+        document.close();
+    } catch (IOException e) {
+        e.printStackTrace();
+    }
 }
 ```
 
