--- a/各种文件类型转换.md
+++ b/各种文件类型转换.md
@@ -290,3 +290,107 @@ public void splitPdf(HttpServletResponse response, int pageNum, String filePath)
 }
 ```
 
+# 七、将PDF转为word
+
+如果是一个大文档，我们给前端渲染的时候不会全部给他，而是一次一页一页的给。那么我们是一个大文档模板怎么办。将这个大文档存为`PDF`格式，每次一页一页的获取，因为`PDF`不能更改，属于最终文本。那么我们就可以将`pdf`转为`word`替换为最终文档，然后在将`word`转为`PDF`给前端显示。
+
+## 7.1、pdf和word优缺点
+
+### pdf
+
+- 优点
+
+pdf支持读取指定的页面，前端页支持直接渲染`pdf`格式的文本。所以大文档就不用全部读取，只需要读取指定页面就好。
+
+- 缺点
+
+pdf不支持更改
+
+### word
+
+- 优点
+
+支持更改和替换
+
+- 缺点
+
+不支持获取指定页的文档，前端不支持显示。
+
+
+
+## 7.2、pdf转为doc
+
+<font style="font-weight: bold;color:blue">这种方式只支持转换 4 页</font>
+
+```java
+import com.aspose.pdf.*;
+
+import java.io.IOException;
+```
+
+```java
+/**
+ * pdf转为doc
+ */
+public static void savingToDoc(){
+    // 读取pdf文档
+    Document pdfDocument = new Document("C:\\Users\\stars\\Desktop\\abc.pdf");
+    // 转换为doc文档
+    pdfDocument.save("C:\\Users\\stars\\Desktop\\TableHeightIssue.doc", SaveFormat.Doc);
+}
+```
+
+## 7.3、pdf转为docx
+
+<font style="font-weight: bold;color:blue">这种方式只支持转换 4 页</font>
+
+这种方式转为`doc`也可以，只需要将文件后缀换一下就行。
+
+```java
+import com.aspose.pdf.*;
+
+import java.io.IOException;
+```
+
+```java
+/**
+ * pdf转为docx
+ */
+public static void savingToDOCX() {
+    // Load source PDF file
+    Document doc = new Document("C:\\Users\\stars\\Desktop\\abc.pdf");
+    // Instantiate Doc SaveOptions instance
+    DocSaveOptions saveOptions = new DocSaveOptions();
+    // Set output file format as DOCX
+    saveOptions.setFormat(DocSaveOptions.DocFormat.DocX);
+    // Save resultant DOCX file
+    doc.save("C:\\Users\\stars\\Desktop\\TableHeightIssue.docx", saveOptions);
+}
+```
+
+# 八、PDF转为PPT
+
+```java
+import com.aspose.pdf.*;
+
+import java.io.IOException;
+```
+
+```java
+/**
+ * 将PDF转为ppt
+ */
+public static void ConvertPDFToPPTX(){
+    // Load PDF document
+    Document doc =new Document("C:\\Users\\stars\\Desktop\\t.pdf");
+    // Instantiate PptxSaveOptions instance
+    PptxSaveOptions pptx_save = new PptxSaveOptions();
+    // Save the output in PPTX format
+    doc.save("C:\\Users\\stars\\Desktop\\output.pptx", pptx_save);
+}
+```
+
+
+
+
+
