--- a/各种文件类型转换.md
+++ b/各种文件类型转换.md
@@ -392,5 +392,33 @@ public static void ConvertPDFToPPTX(){
 
 
 
+# 九、PDF转为SVG图片
+
+```java
+import com.aspose.pdf.*;
+
+import java.io.IOException;
+```
+
+```java
+/**
+ * 将pdf转为SVG图片
+ */
+public static void ConvertPDFToSVGFormat(){
+    // load PDF document
+    Document doc = new Document("C:\\Users\\stars\\Desktop\\t.pdf");
+    // instantiate an object of SvgSaveOptions
+    SvgSaveOptions saveOptions = new SvgSaveOptions();
+    // do not compress SVG image to Zip archive
+    saveOptions.CompressOutputToZipArchive = false;
+    // resultant file name
+    String outFileName ="C:\\Users\\stars\\Desktop\\Output.svg";
+    // save the output in SVG files
+    doc.save(outFileName, saveOptions);
+}
+```
+
+
+
 
 
