--- a/各种文件类型转换.md
+++ b/各种文件类型转换.md
@@ -420,5 +420,26 @@ public static void ConvertPDFToSVGFormat(){
 
 
 
+# 十、将SVG转为PDF
 
+```java
+import com.aspose.pdf.*;
+
+import java.io.IOException;
+```
+
+```java
+/**
+ * 将SVG转为PDF
+ */
+public static void ConvertSVGFileToPDFFormat(){
+    String file = "C:\\Users\\stars\\Desktop\\Output.svg";
+    // Instantiate LoadOption object using SVG load option
+    LoadOptions options = new SvgLoadOptions();
+    // Create Document object
+    Document document = new Document(file, options);
+    // Save the resultant PDF document
+    document.save("C:\\Users\\stars\\Desktop\\Result.pdf");
+}
+```
 
