--- a/各种文件类型转换.md
+++ b/各种文件类型转换.md
@@ -443,3 +443,44 @@ public static void ConvertSVGFileToPDFFormat(){
 }
 ```
 
+
+
+# 十一、将PDF转为HTML
+
+这种方式转换的效果不好
+
+```java
+import com.aspose.pdf.*;
+import com.aspose.pdf.text.CustomFontSubstitutionBase;
+
+import java.io.IOException;
+```
+
+```java
+/**
+ * pdf转为HTML
+ * @throws Exception
+ */
+public static void DefaultFontWhenSpecificFontMissing() throws Exception {
+    String myDir = "C:\\Users\\stars\\Desktop\\";
+    Document pdf = new Document(myDir + "t.pdf");
+    // configure font substitution
+    CustomSubst1 subst1 = new CustomSubst1();
+    FontRepository.getSubstitutions().add(subst1);
+    // Configure notifier to console
+    pdf.FontSubstitution.add(new Document.FontSubstitutionHandler() {
+        public void invoke(Font font, Font newFont) {
+            // print substituted FontNames into console
+            System.out.println("Warning: Font " + font.getFontName() + " was substituted with another font -> " + newFont.getFontName());
+        }
+    });
+    HtmlSaveOptions htmlSaveOps = new HtmlSaveOptions();
+    pdf.save(myDir + "Redis_1150_substitutedWithMSGothic_release.html", htmlSaveOps);
+}
+private static class CustomSubst1 extends CustomFontSubstitutionBase {
+    public boolean trySubstitute(OriginalFontSpecification originalFontSpecification, /* out */com.aspose.pdf.Font[] substitutionFont) {
+        substitutionFont[0] = FontRepository.findFont("MSGothic");
+        return true;
+    }
+}
+```
