--- a/各种文件类型转换.md
+++ b/各种文件类型转换.md
@@ -447,6 +447,48 @@ public static void ConvertSVGFileToPDFFormat(){
 
 # 十一、将PDF转为HTML
 
+> 显示大文档模板思路
+>
+> 完成大文本显示那种，就可以将大文档存放成PDF的格式。获取PDF指定页的文档模板，在转为HTML替换为真正的文档就可以个前端显示。
+
+## 11.1、方式一
+
+效果还可以
+
+```java
+import com.aspose.pdf.*;
+import com.aspose.pdf.text.CustomFontSubstitutionBase;
+
+import java.io.IOException;
+import java.util.HashMap;
+import java.util.Map;
+```
+
+```java
+/**
+ * pdf转为HTML格式
+ */
+public static void EscapeHTMLTagsAndSpecialCharacters(){
+    // Load existing PDf file
+    Document pdfDoc = new Document("C:\\Users\\stars\\Desktop\\abc.pdf");
+    final Map names = new HashMap();
+    /*pdfDoc.FontSubstitution.add(new Document.FontSubstitutionHandler() {
+        public void invoke(Font font, Font newFont) {
+            // add substituted FontNames into map.
+            names.put(font.getFontName(), newFont.getFontName());
+            // or print the message into console
+            System.out.println("Warning: Font " + font.getFontName() + " was substituted with another font -> " + newFont.getFontName());
+        }
+    });*/
+    // instantiate HTMLSave option to save output in HTML
+    HtmlSaveOptions htmlSaveOps = new HtmlSaveOptions();
+    // save resultant file
+    pdfDoc.save("C:\\Users\\stars\\Desktop\\output.html", htmlSaveOps);
+}
+```
+
+## 11.2、方式二
+
 这种方式转换的效果不好
 
 ```java
