--- a/各种文件类型转换.md
+++ b/各种文件类型转换.md
@@ -526,3 +526,76 @@ private static class CustomSubst1 extends CustomFontSubstitutionBase {
     }
 }
 ```
+
+# 十二、PDF转为emf文件
+
+只能转换一页
+
+```java
+import com.aspose.pdf.*;
+import com.aspose.pdf.devices.EmfDevice;
+import com.aspose.pdf.devices.Resolution;
+import com.aspose.pdf.text.CustomFontSubstitutionBase;
+
+import java.io.IOException;
+import java.util.HashMap;
+import java.util.Map;
+```
+
+```java
+/**
+ * pdf转为emf文件，只能转换一页
+ */
+public static void PDFToEMF(){
+    // instantiate EmfDevice object
+    EmfDevice device = new EmfDevice(new Resolution(96));
+    // load existing PDF file
+    Document doc = new Document("C:\\Users\\stars\\Desktop\\abc.pdf");
+    // save first page of PDF file as Emf image
+    device.process(doc.getPages().get_Item(1), "C:\\Users\\stars\\Desktop\\output.emf");
+}
+```
+
+# 十三、向PDF文档中添加表格
+
+```java
+import com.aspose.pdf.*;
+import com.aspose.pdf.devices.EmfDevice;
+import com.aspose.pdf.devices.Resolution;
+import com.aspose.pdf.text.CustomFontSubstitutionBase;
+
+import java.io.IOException;
+import java.util.HashMap;
+import java.util.Map;
+```
+
+```java
+/**
+ * 在现有的PDF 文档中添加数据
+ * <p>指定页添加表格</p>
+ */
+public static void addTableInExistingPDFDocument(){
+    // Load source PDF document
+    Document doc =  new Document("C:\\Users\\stars\\Desktop\\abc.pdf");
+    // 初始化表的新实例
+    Table table = new Table();
+    // 将表格边框颜色设置为浅灰色
+    table.setBorder(new BorderInfo(BorderSide.All, .5f, Color.getLightGray()));
+    // 设置表格单元格的边框
+    table.setDefaultCellBorder(new BorderInfo(BorderSide.All, .5f, Color.getLightGray()));
+
+    // 添加三列十行的数据
+    for (int row_count = 1; row_count < 10; row_count++) {
+        // 向表中添加行
+        Row row = table.getRows().add();
+        // 添加表格的行数据
+        row.getCells().add("Column (" + row_count + ", 1)");
+        row.getCells().add("Column (" + row_count + ", 2)");
+        row.getCells().add("Column (" + row_count + ", 3)");
+    }
+    // 在PDF文档的第二页添加 table 这个表格
+    doc.getPages().getUnrestricted(2).getParagraphs().add(table);
+    doc.save( "C:\\Users\\stars\\Desktop\\Annotation_output.pdf");
+}
+```
+
